packages/kyvernoPolicies/chart/tests/vpol/disallow-rbac-on-default-serviceaccounts-cel/kyverno-test/resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-bad-default-rolebinding
  namespace: default
subjects:
- kind: ServiceAccount
  name: default
  namespace: default
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-bad-default-clusterrolebinding
subjects:
- kind: ServiceAccount
  name: default
  namespace: default
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-bad-group-rolebinding
  namespace: default
subjects:
- kind: Group
  name: system:serviceaccounts:kyverno-policies
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-bad-group-clusterrolebinding
subjects:
- kind: Group
  name: system:serviceaccounts
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-good-nondefault-rolebinding
  namespace: default
subjects:
- kind: ServiceAccount
  name: disallow-rbac-on-default-serviceaccounts
  namespace: default
- kind: User
  name: disallow-rbac-on-default-serviceaccounts
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-good-nondefault-clusterrolebinding
subjects:
- kind: ServiceAccount
  name: disallow-rbac-on-default-serviceaccounts
  namespace: default
- kind: User
  name: disallow-rbac-on-default-serviceaccounts
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: disallow-rbac-on-default-serviceaccounts-good-empty-subjects-rolebinding
  namespace: default
roleRef:
  kind: ClusterRole
  name: disallow-rbac-on-default-serviceaccounts
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: system:service-account-issuer-discovery
subjects:
- kind: Group
  name: system:serviceaccounts
roleRef:
  kind: ClusterRole
  name: system:service-account-issuer-discovery
  apiGroup: rbac.authorization.k8s.io
